# illegalGambling-Search-AI

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  ecosystem.config.js  package-lock.json  package.json
.claude/: settings.local.json
.claude/hooks/: notification-hook.sh  slack-notify.js  stop-hook.sh
backend/: .dockerignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: ead60ea1b22c_initial_tables.py
backend/app/: config.py  main.py
backend/app/api/v1/: analytics.py  auth.py  evidence.py  investigations.py  router.py  sites.py
backend/app/core/: database.py  deps.py  redis.py  security.py
backend/app/models/: __init__.py  audit.py  base.py  detection.py  domain.py  enums.py  evidence.py  intervention.py  investigation.py  site.py  sms.py  system.py  user.py
backend/app/schemas/: analytics.py  auth.py  common.py  evidence.py  investigation.py  site.py
backend/scripts/: entrypoint.sh  seed_demo_data.py  send-email.js  slack-listener.js  slack-test-message.js
docs/: BACKEND-PLAN.md  PRD.md  ROADMAP.md
docs/PRD-sections/: 01-overview-and-stories.md  02-evidence-collection-engine.md  03-sms-authentication.md  08-data-model.md  (+4 more)
frontend/: .dockerignore  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  vercel.json
nginx/: Dockerfile  nginx.conf
prisma/: schema.prisma  seed.ts
scripts/: send-email.js  slack-listener.js  slack-test-message.js
tasks/: 000-sample.md
(+236 files in other folders)
